--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         <div class="right">
             <button id="sign_in">Sign in</button>
-            <div class="container">
+            <div class="container" id="Toggle1">
                 <button id="Toggle">
                     
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="20" height="20" viewBox="0 0 256 256" xml:space="preserve">
